--- a/index.html
+++ b/index.html
@@ -89,45 +89,20 @@
 										Take to the skies</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/EchoPlane.webp" alt="" /></a>
-									<p>Help fundraise a skywriting plane in support of echo and the fundamental ethics to ending social virtual experiences for thousands of users!</p>
+									<p>Help fundraise a skywriting plane in support of echo and the fundamental ethics to ending a social virtual experiences for thousands of users!</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Donate now</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="#">Don't forget to<br />
+										join our discord</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://discord.gg/save-echo" class="image fit"><img src="images/fightForEchoDiscord.jpg" alt="" /></a>
+									<p>Hop into our discord and join the fight for Echo, be instantly updated with the latest Echo news and discussions regarding Echo's future.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://discord.gg/save-echo" class="button">Join Now</a></li>
 									</ul>
 								</article>
 							</section>
