--- a/index copy.html
+++ b/index copy.html
@@ -6,31 +6,28 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Fight for EchoVR</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+		<link rel="manifest" href="./site.webmanifest">
 	</head>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+			<div id="wrapper">
 
 				<!-- Intro -->
-					<div id="intro">
-						<h1>Save Echo Vr</h1>
-						<p class="introbg">Since its inception, Echo VR has been one of the most successful games on the meta store along with one of the largest organically grown communities of passionate players. Generating
-						competitive leagues, huge organized LAN events, and even a professionally paid league, Echo VR can only be labeled an absolute success. Now it is being permanently shut down forever along with everything created along the way.<br><em><strong>Help us save it</strong></em></br>
-						</p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
+					<div id="placeholder">	
 					</div>
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Save Echo VR</a>
+						<a href="index.html" class="logo">#FightForEcho</a>
 					</header>
 
 				<!-- Nav -->
@@ -51,7 +48,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://www.change.org/p/save-echo-vr?utm_content=cl_sharecopy_35500588_en-US%3A9&recruiter=1293918748&recruited_by_id=e94e5c60-a1b6-11ed-80fd-5daba8a76b18&utm_source=share_petition&utm_medium=copylink&utm_campaign=psf_combo_share_initial&utm_term=psf_combo_share_initial&share_bandit_exp=initial-35500588-en-US">Visit our petition site to save all of echo<br /></a></h2>
+									<h2><a href="https://www.change.org/p/save-echo-vr?utm_content=cl_sharecopy_35500588_en-US%3A9&recruiter=1293918748&recruited_by_id=e94e5c60-a1b6-11ed-80fd-5daba8a76b18&utm_source=share_petition&utm_medium=copylink&utm_campaign=psf_combo_share_initial&utm_term=psf_combo_share_initial&share_bandit_exp=initial-35500588-en-US">Visit our petition site</a></h2>
 								</header>
 								<a href="https://www.change.org/p/save-echo-vr?utm_content=cl_sharecopy_35500588_en-US%3A9&recruiter=1293918748&recruited_by_id=e94e5c60-a1b6-11ed-80fd-5daba8a76b18&utm_source=share_petition&utm_medium=copylink&utm_campaign=psf_combo_share_initial&utm_term=psf_combo_share_initial&share_bandit_exp=initial-35500588-en-US" class="image main"><img src="images/EchoPaint.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -84,58 +81,32 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="#">Save echo:<br />
+										Take to the skies</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/EchoPlane.webp" alt="" /></a>
+									<p>Help fundraise a skywriting plane in support of echo and the fundamental ethics to ending a social virtual experiences for thousands of users!</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Donate now</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="#">Don't forget to<br />
+										join our discord</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://discord.gg/save-echo" class="image fit"><img src="images/fightForEchoDiscord.jpg" alt="" /></a>
+									<p>Hop into our discord and join the fight for Echo, be instantly updated with the latest Echo news and discussions regarding Echo's future.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://discord.gg/save-echo" class="button">Join Now</a></li>
 									</ul>
 								</article>
 							</section>
 
 						<!-- Footer -->
-							<footer>
+							<!-- <footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
+									<a href="#" class="previous">Prev</a>
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
@@ -145,15 +116,15 @@
 									<a href="#" class="page">10</a>
 									<a href="#" class="next">Next</a>
 								</div>
-							</footer>
+							</footer> -->
 
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Share your story</h2>
-							<p>Tell us your echo related stories and we will publish them right here!</p>
+							<h2>See something missing?</h2>
+							<p>Message us any new ways to get involved / news stories or just tell us your echo related stories and we will publish them right here!</p>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -215,6 +186,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/scrollAnimations.js"></script>
 
 	</body>
 </html>
