--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Get involved</a></li>
-							<li><a href="generic.html">Recent News</a></li>
-							<li><a href="elements.html">Stories</a></li>
+							<li><a href="recentnews.html">Recent News</a></li>
+							<!-- <li><a href="elements.html">Stories</a></li> -->
 						</ul>
 						<ul class="icons">
 							<li><a href="https://discord.gg/save-echo" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
