--- a/recentnews.html
+++ b/recentnews.html
@@ -33,8 +33,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Get involved</a></li>
-							<li><a href="generic.html">Recent News</a></li>
+							<li><a href="index.html">Get involved</a></li>
+							<li class="active"><a href="generic.html">Recent News</a></li>
 							<li><a href="elements.html">Stories</a></li>
 						</ul>
 						<ul class="icons">
@@ -48,35 +48,45 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://www.change.org/p/save-echo-vr?utm_content=cl_sharecopy_35500588_en-US%3A9&recruiter=1293918748&recruited_by_id=e94e5c60-a1b6-11ed-80fd-5daba8a76b18&utm_source=share_petition&utm_medium=copylink&utm_campaign=psf_combo_share_initial&utm_term=psf_combo_share_initial&share_bandit_exp=initial-35500588-en-US">Visit our petition site</a></h2>
+									<span class="date">Febuary 5, 2023</span>
+									<h2>Thrillseekers latest video</h2>
 								</header>
-								<a href="https://www.change.org/p/save-echo-vr?utm_content=cl_sharecopy_35500588_en-US%3A9&recruiter=1293918748&recruited_by_id=e94e5c60-a1b6-11ed-80fd-5daba8a76b18&utm_source=share_petition&utm_medium=copylink&utm_campaign=psf_combo_share_initial&utm_term=psf_combo_share_initial&share_bandit_exp=initial-35500588-en-US" class="image main"><img src="images/EchoPaint.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="https://www.change.org/p/save-echo-vr?utm_content=cl_sharecopy_35500588_en-US%3A9&recruiter=1293918748&recruited_by_id=e94e5c60-a1b6-11ed-80fd-5daba8a76b18&utm_source=share_petition&utm_medium=copylink&utm_campaign=psf_combo_share_initial&utm_term=psf_combo_share_initial&share_bandit_exp=initial-35500588-en-US" class="button large">sign petition</a></li>
-								</ul>
+								<div class="video main">
+									<iframe width="100%" height="100%" src="https://www.youtube.com/embed/aj6UWDMRX54" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+								</div>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								
 								<article>
 									<header>
-										<h2><a href="https://www.change.org/p/ensure-echo-combat-is-free-to-play-for-new-people-until-aug?utm_content=cl_sharecopy_35500667_en-GB%3A9&recruiter=1293903975&recruited_by_id=835b0070-a19d-11ed-9b80-796a1ef1f1e9&utm_source=share_petition&utm_medium=copylink&utm_campaign=psf_combo_share_initial&share_bandit_exp=initial-35500667-en-GB">Ensure echo combat<br />
-										is free until aug</a></h2>
+										<span class="date">Febuary 8, 2023</span>
+										<h2><a href="https://www.tiktok.com/@palidore/video/7197595459144240426">Palidore on<br> how to save echo</a></h2>
 									</header>
-									<a href="https://www.change.org/p/ensure-echo-combat-is-free-to-play-for-new-people-until-aug?utm_content=cl_sharecopy_35500667_en-GB%3A9&recruiter=1293903975&recruited_by_id=835b0070-a19d-11ed-9b80-796a1ef1f1e9&utm_source=share_petition&utm_medium=copylink&utm_campaign=psf_combo_share_initial&share_bandit_exp=initial-35500667-en-GB" class="image fit"><img src="./images/EchoCombat.jpg" alt="Echo combat petition" /></a>
-									<p>Meta/RAD are removing the ability for new players to purchase Echo Combat as of Jan 31st, this petition is to allow for echo combat to be free to play until its shutdown in August.</p>
-									<ul class="actions special">
-										<li><a href="https://www.change.org/p/ensure-echo-combat-is-free-to-play-for-new-people-until-aug?utm_content=cl_sharecopy_35500667_en-GB%3A9&recruiter=1293903975&recruited_by_id=835b0070-a19d-11ed-9b80-796a1ef1f1e9&utm_source=share_petition&utm_medium=copylink&utm_campaign=psf_combo_share_initial&share_bandit_exp=initial-35500667-en-GB" class="button">Sign Petition</a></li>
-									</ul>
+									<div class="tiktok">
+										<iframe
+											autoplay="false"
+   											title="tiktok"
+    										src="https://tiktok.com/embed/7197595459144240426"
+    										style="
+       										 border:0;
+											 height: 100%;    /* autoplay disabled, play button appear */
+       										 width: 100%;          /* autoplay enabled, play button disappear */"
+											 
+										></iframe>
+									</div>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://communityforums.atmeta.com/">Meta Community<br> forums</a></h2>
+										<span class="date">Febuary 6, 2023</span>
+										<h2><a href="https://www.pcgamer.com/john-carmack-goes-off-about-online-only-games-being-abandoned-i-believe-in-saving-everything/">John Carmack statement<br />
+										on Echo VR shutdown</a></h2>
 									</header>
-									<a href="https://communityforums.atmeta.com/" class="image fit"><img src="images/MetaSupport.png" alt="Meta support page" /></a>
-									<p>Keep Echo Vr in the spotlight through the meta community forums. Make a post or reply to a fellow Echo unit's post to keep us trending on Meta community forums page! </p>
+									<a href="https://www.pcgamer.com/john-carmack-goes-off-about-online-only-games-being-abandoned-i-believe-in-saving-everything/" class="image fit"><img src="./images/johnCarmack.jpg" alt="John Carmack" /></a>
+									<p>Last week Meta announced that, as well as losing four billion dollars on the metaverse in the last quarter, it would be shutting down Echo VR..</p>
 									<ul class="actions special">
-										<li><a href="https://communityforums.atmeta.com/" class="button">Visit site</a></li>
+										<li><a href="https://www.pcgamer.com/john-carmack-goes-off-about-online-only-games-being-abandoned-i-believe-in-saving-everything/" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
@@ -186,7 +196,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="assets/js/scrollAnimations.js"></script>
+			<script src="assets/js/AltScrollAnimations.js"></script>
 
 	</body>
 </html>
