Removed "stories" tab from recent news page

--- a/recentnews.html
+++ b/recentnews.html
@@ -35,7 +35,7 @@
 						<ul class="links">
 							<li><a href="index.html">Get involved</a></li>
 							<li class="active"><a href="generic.html">Recent News</a></li>
-							<li><a href="elements.html">Stories</a></li>
+							<!-- <li><a href="elements.html">Stories</a></li> -->
 						</ul>
 						<ul class="icons">
 							<li><a href="https://discord.gg/save-echo" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
