--- a/recentnews.html
+++ b/recentnews.html
@@ -183,7 +183,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a> & <a href='https://anthonysaezportfolio.netlify.app/#'>Anthony Saez</a></li></ul>
 					</div>
 
 			</div>
