Added link to title of Echo vr to be shutdown section

--- a/recentnews.html
+++ b/recentnews.html
@@ -134,7 +134,7 @@
 
 								<article>
 									<header>
-										<h2><a href="#">Echo vr to be<br />
+										<h2><a href="https://medium.com/@EchoGames/an-update-on-the-future-of-echo-vr-7f074dca1ed1">Echo vr to be<br />
 										shutdown august 1</a></h2>
 									</header>
 									<span class="date">Febuary 1, 2023</span>
